--- a/p8105_hw2_sz2957.md
+++ b/p8105_hw2_sz2957.md
@@ -167,23 +167,35 @@ trans_ent %>%
 
 ### Problem 2
 
-Read and Clean the Mr.Trash Wheel sheet:
+###### Read and clean the data in the Mr.Trash Wheel sheet:
+
+Below is the process to read and clean the data in the first sheet of
+’Trash Wheel Collection Data.xlsx\`, which is Mr.Trash Wheel:
+
+-   The process begins with data import and updating variable names.
+    Within the `read_excel` function, I choose the range within A2:N549,
+    to omit non-data entries.
+-   Then, I Use `drop_na` function to omit rows that do not include
+    dumpster-specific data.
+-   In the next step, I round the number of sports balls to the nearest
+    integer and converts the result to an integer variable using
+    `as.integer`.Also, I convert `year` to numeric variable. In
+    addition, I create a new variable `Trash_wheel` and define them as
+    “Mr.Trash wheel”. These is for merging purpose.
 
 ``` r
-# Load the data file, without the picture in the first row and numerical sums in the last row(that do not include dumpster-specific data)
+
 Mr_Trash_wheel = 
   read_excel("./data/Trash Wheel Collection Data.xlsx",sheet = 1, range = "A2:N549") %>% 
-# clean names
   janitor::clean_names() %>% 
-# round the number of sports balls to the nearest integer and converts the result to an interger variable; Add a new variable indicate this is from Mr. Trash wheel: Convert year into num variable
+  drop_na(dumpster) %>% 
   mutate(
-      sports_balls_inte = as.integer(sports_balls),
+      sports_balls = as.integer(sports_balls),
       Trash_wheel = "Mr. Trash wheel",
       year = as.numeric(year)
     )
-# Demonstrate the table
   Mr_Trash_wheel 
-## # A tibble: 547 × 16
+## # A tibble: 547 × 15
 ##    dumpster month  year date                weight_tons volume…¹ plast…² polys…³
 ##       <dbl> <chr> <dbl> <dttm>                    <dbl>    <dbl>   <dbl>   <dbl>
 ##  1        1 May    2014 2014-05-16 00:00:00        4.31       18    1450    1820
@@ -196,27 +208,34 @@ Mr_Trash_wheel =
 ##  8        8 May    2014 2014-05-28 00:00:00        3.7        16    3580    4310
 ##  9        9 June   2014 2014-06-05 00:00:00        2.52       14    2400    2790
 ## 10       10 June   2014 2014-06-11 00:00:00        3.76       18    1340    1730
-## # … with 537 more rows, 8 more variables: cigarette_butts <dbl>,
+## # … with 537 more rows, 7 more variables: cigarette_butts <dbl>,
 ## #   glass_bottles <dbl>, grocery_bags <dbl>, chip_bags <dbl>,
-## #   sports_balls <dbl>, homes_powered <dbl>, sports_balls_inte <int>,
-## #   Trash_wheel <chr>, and abbreviated variable names ¹​volume_cubic_yards,
-## #   ²​plastic_bottles, ³​polystyrene
+## #   sports_balls <int>, homes_powered <dbl>, Trash_wheel <chr>, and abbreviated
+## #   variable names ¹​volume_cubic_yards, ²​plastic_bottles, ³​polystyrene
 ## # ℹ Use `print(n = ...)` to see more rows, and `colnames()` to see all variable names
 ```
 
-Read and clean the Professor Trash Wheel sheet:
+###### Read and clean the data in the Professor Wheel sheet:
+
+Below is the process to read and clean the data in the second sheet of
+’Trash Wheel Collection Data.xlsx\`, which is Professor Wheel:
+
+-   The process begins with data import and updating variable names.
+    Within the `read_excel` function, I choose the range within A2:M96,
+    to omit non-data entries.
+-   Then, I Use `drop_na` function to omit rows that do not include
+    dumpster-specific data.
+-   In the next step, I create a new variable `Trash_wheel` and define
+    them as “Professor Trash wheel”. These is for merging purpose.
 
 ``` r
-# Load the data file, without the picture in the first row and numerical sums in the last row(that do not include dumpster-specific data)
 Pro_Trash_wheel = 
   read_excel("./data/Trash Wheel Collection Data.xlsx",sheet = 2, range = "A2:M96") %>% 
-# clean names
   janitor::clean_names() %>% 
-# round the number of sports balls to the nearest integer and converts the result to an interger variable; Add a new variable indicate this is from Mr. Trash wheel
+  drop_na(dumpster) %>% 
   mutate(
       Trash_wheel = "Professor Trash wheel"
     )
-# Demonstrate the table
   Pro_Trash_wheel
 ## # A tibble: 94 × 14
 ##    dumpster month     year date                weight_…¹ volum…² plast…³ polys…⁴
@@ -238,18 +257,19 @@ Pro_Trash_wheel =
 ## # ℹ Use `print(n = ...)` to see more rows, and `colnames()` to see all variable names
 ```
 
+###### Merge three datasets use `full_join()`
+
 Combine two trash wheel sheet. Since there is a huge difference between
-two dataset, we will choose full join method.
+two dataset, we will choose full join method. After merging, I use
+`select()` to make the `dumpster` and `Trash_wheel` variables as top two
+columns.
 
 ``` r
-# Join two dataset use full join
 Trash_wheel =
   full_join(Mr_Trash_wheel, Pro_Trash_wheel) %>% 
-# Change the order of variables
   select(dumpster, Trash_wheel, everything())
-# Demonstrate the table
   Trash_wheel
-## # A tibble: 641 × 16
+## # A tibble: 641 × 15
 ##    dumpster Trash_wheel  month  year date                weigh…¹ volum…² plast…³
 ##       <dbl> <chr>        <chr> <dbl> <dttm>                <dbl>   <dbl>   <dbl>
 ##  1        1 Mr. Trash w… May    2014 2014-05-16 00:00:00    4.31      18    1450
@@ -262,18 +282,16 @@ Trash_wheel =
 ##  8        8 Mr. Trash w… May    2014 2014-05-28 00:00:00    3.7       16    3580
 ##  9        9 Mr. Trash w… June   2014 2014-06-05 00:00:00    2.52      14    2400
 ## 10       10 Mr. Trash w… June   2014 2014-06-11 00:00:00    3.76      18    1340
-## # … with 631 more rows, 8 more variables: polystyrene <dbl>,
+## # … with 631 more rows, 7 more variables: polystyrene <dbl>,
 ## #   cigarette_butts <dbl>, glass_bottles <dbl>, grocery_bags <dbl>,
-## #   chip_bags <dbl>, sports_balls <dbl>, homes_powered <dbl>,
-## #   sports_balls_inte <int>, and abbreviated variable names ¹​weight_tons,
-## #   ²​volume_cubic_yards, ³​plastic_bottles
+## #   chip_bags <dbl>, sports_balls <int>, homes_powered <dbl>, and abbreviated
+## #   variable names ¹​weight_tons, ²​volume_cubic_yards, ³​plastic_bottles
 ## # ℹ Use `print(n = ...)` to see more rows, and `colnames()` to see all variable names
 ```
 
-Calculate some important data and results:
+###### Calculate some important data and results:
 
 ``` r
-# calculate the number of observations in the resulting dataset
 Trash_wheel %>% 
   select(dumpster, Trash_wheel) %>% 
   distinct
@@ -292,7 +310,7 @@ Trash_wheel %>%
 ## 10       10 Mr. Trash wheel
 ## # … with 631 more rows
 ## # ℹ Use `print(n = ...)` to see more rows
-# Describe the key variables
+
   summary(Trash_wheel)
 ##     dumpster     Trash_wheel           month                year     
 ##  Min.   :  1.0   Length:641         Length:641         Min.   :2014  
@@ -322,31 +340,31 @@ Trash_wheel %>%
 ##  Min.   :   24   Min.   :  180   Min.   : 0.00   Min.   : 0.00  
 ##  1st Qu.:  360   1st Qu.:  800   1st Qu.: 6.00   1st Qu.:34.67  
 ##  Median :  780   Median : 1340   Median :11.00   Median :49.00  
-##  Mean   : 1218   Mean   : 2406   Mean   :12.58   Mean   :44.11  
+##  Mean   : 1218   Mean   : 2406   Mean   :12.56   Mean   :44.11  
 ##  3rd Qu.: 1480   3rd Qu.: 2684   3rd Qu.:18.00   3rd Qu.:57.50  
 ##  Max.   :13450   Max.   :20100   Max.   :56.00   Max.   :93.67  
-##                                  NA's   :94      NA's   :73     
-##  sports_balls_inte
-##  Min.   : 0.00    
-##  1st Qu.: 6.00    
-##  Median :11.00    
-##  Mean   :12.56    
-##  3rd Qu.:18.00    
-##  Max.   :56.00    
-##  NA's   :94
-# Total weight of trash collected by Professor Trash Wheel
-Trash_wheel %>% 
-  filter(Trash_wheel == "Professor Trash wheel") %>% 
-  pull(weight_tons) %>% 
-  mean()
-## [1] 2.022553
-# Total number of sports balls collected by Mr.Trash Wheel in 2020
-Trash_wheel %>% 
-  filter(Trash_wheel == "Mr. Trash wheel", year == 2020) %>% 
-  pull(sports_balls_inte) %>% 
+##                                  NA's   :94      NA's   :73
+  
+Total_weight_pf = 
+  filter(Trash_wheel, Trash_wheel == "Professor Trash wheel") %>%
+  pull(weight_tons)%>%
   sum()
-## [1] 856
+
+Total_sports_balls_Mr =
+  filter(Trash_wheel, Trash_wheel == "Mr. Trash wheel", year == 2020) %>% 
+  pull(sports_balls) %>% 
+  sum()
 ```
+
+-   In the final merged dataset `Trash_wheel`, there are 641
+    observations and 15 variables.
+-   The key variables’ names are dumpster, Trash_wheel, month, year,
+    date, weight_tons, volume_cubic_yards, plastic_bottles, polystyrene,
+    cigarette_butts, glass_bottles, grocery_bags, chip_bags,
+    sports_balls, homes_powered
+-   The total weight of trash collected by Professor Trash Wheel is
+    190.12
+-   The total number of sports balls collected by Mr. Trash Wheel is 856
 
 ### Problem 3
 
