--- a/p8105_hw2_sz2957.md
+++ b/p8105_hw2_sz2957.md
@@ -361,10 +361,11 @@ Total_sports_balls_Mr =
 -   The key variables’ names are dumpster, Trash_wheel, month, year,
     date, weight_tons, volume_cubic_yards, plastic_bottles, polystyrene,
     cigarette_butts, glass_bottles, grocery_bags, chip_bags,
-    sports_balls, homes_powered
+    sports_balls, homes_powered.
 -   The total weight of trash collected by Professor Trash Wheel is
-    190.12
+    190.12 tons.
 -   The total number of sports balls collected by Mr. Trash Wheel is 856
+    in 2020.
 
 ### Problem 3
 
@@ -377,7 +378,7 @@ Below is the process to read and clean the data in `pols-month.csv`:
     variables `year`,`month`, and `day`.
 -   In the next `mutate()` step, I use `month.abb` to replace month
     number with abbreviated month name and create a `president` variable
-    taking values `gop` and `dem` using `recode()`.
+    taking values `gop` and `dem`.
 -   In `select()` step, I remove `prez_dem` and `prez_gop` and `day`
     variable and choose other variables.
 
@@ -387,8 +388,8 @@ pols_month =
   janitor::clean_names() %>% 
   separate(col = mon, into = c('year','month','day'), sep = "-" , convert = TRUE) %>% 
   mutate(
-     month = month.abb[month],
-     president = recode(prez_dem, '0' = "gop", '1' = "dem")
+    month = month.abb[month],
+    president = case_when(prez_dem == "1" ~ "dem", prez_gop     == "1" ~ "gop")
   ) %>% 
   select(year, month, president, gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem)
 pols_month
